<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="75dip"
            android:paddingLeft="5dip"
            android:gravity="left|top"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/username_text" />
        
        <EditText
            android:id="@+id/mainlogin"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/username_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="75dip"
            android:paddingLeft="5dip"
            android:gravity="left|top"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/password_text"/>
        <EditText
            android:id="@+id/mainpassword"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/password_text" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dip"
            android:contentDescription="@string/icon_text"
            android:src="@drawable/icon" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="75dip"
            android:paddingLeft="5dip"
            android:gravity="left|top"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/remotehost_text" />
        <EditText
            android:id="@+id/mainhost"
            android:layout_height="wrap_content"
            android:layout_width="150dip"
            android:inputType="text"
            android:hint="@string/remotehost_text" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="75dip"
            android:paddingLeft="5dip"
            android:gravity="left|top"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:text="@string/connection_text" />
         <Spinner
            android:id="@+id/connections_spinner"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall" />
         <Button android:text="@string/edit_connection" 
            android:id="@+id/editConnectionButton"
            android:paddingLeft="10dip"
            android:layout_width="50dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="fill_parent" />
         <Button android:text="@string/delete_connection" 
            android:id="@+id/deleteConnectionButton"
            android:paddingLeft="5dip"
            android:layout_width="50dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <TextView
           android:layout_width="75dip"
           android:layout_height="fill_parent"/>
        <Button android:text="@string/connect"
            android:id="@+id/connectionButton"
            android:layout_width="150dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="fill_parent"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>